2009-02-05  Francois Suter  <francois@typo3.org>

	* Fixed bug #10346: l10n_display option abusively hides field for "All" languages when set to defaultAsReadonly

2009-02-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9266: Bug: strcmp() with array as parameter in t3lib_div::linkThisScript() produces warnings with PHP 5.3 (Thanks to Niels Pardon)

2009-02-03  Francois Suter  <francois@typo3.org>

	* Fixed bug #1527: t3lib_svbase: Method init returns wrong value  (thanks to Stefano Kowalke and Michael Miousse)

2009-01-30  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7123: Select wizard doesn't work in Safari (Thanks to Ismaël Bidau)

2009-01-24  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.1.9

2009-01-24  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #10205: DB session record is only created when user is authenticated (thanks also to Michael Stucki)

2009-01-22  Michael Stucki  <michael@typo3.org>

	* Improvement to bugfix #10218: Quote the match-word properly

2009-01-18  Francois Suter  <francois@typo3.org>

	* Fixed bug #10218: For fixing bug #10143 the function str_ireplace was introduced, which does not exist in PHP4 (thanks to Helmut Hummel)

2009-01-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10214: md5's second argument is only valid for PHP5 (thanks to Marcus Krause)

2009-01-21  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10204: PHP error due to "public static" keywords in PHP4 in t3lib_div::generateRandomBytes() (thanks to Marcus Krause)

2009-01-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.1.8

2009-01-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #10146: Session fixation vulnerability in user authentication (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10159: XSS vulnerability in workspace module (thanks to the TYPO3 Security Team and especially Marcus Krause)

2009-01-20  Ingo Renner  <ingo@typo3.org>
